--- a/analyze-code.yml
+++ b/analyze-code.yml
@@ -58,15 +58,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Format and update README
           TOTAL_LINES=$(jq '.SUM.code // 0' output/cloc-output.json)
-          JS_LINES=$(jq '.JavaScript.code // 0' output/cloc-output.json)
-          TS_LINES=$(jq '.TypeScript.code // 0' output/cloc-output.json)
-          JSX_LINES=$(jq '.JSX.code // 0' output/cloc-output.json)
-          CSHARP_LINES=$(jq '."C#".code // 0' output/cloc-output.json)
-          VUE_LINES=$(jq '."Vuejs Component".code // 0' output/cloc-output.json)
-          PHP_LINES=$(jq '.PHP.code // 0' output/cloc-output.json)
-          OTHER_LINES=$((TOTAL_LINES - JS_LINES - TS_LINES - JSX_LINES - PHP_LINES - CSHARP_LINES - VUE_LINES))
 
           # Function to format numbers with commas (ensuring proper locale settings)
           format_number() {
@@ -74,26 +66,26 @@ jobs:
             printf "%'d\n" $1
           }
 
+          # Build sorted breakdown as CSV: lang,lines
+          LANG_BREAKDOWN=$(jq -r 'to_entries
+            | map(select(.key != "header" and .key != "SUM"))
+            | map({lang: .key, lines: .value.code})
+            | map(select(.lines > 1))
+            | sort_by(-.lines)[]
+            | "\(.lang),\(.lines)"' output/cloc-output.json)
+
+          FORMATTED_BREAKDOWN=""
+          while IFS=, read -r LANG LINES; do
+            FORMATTED=$(format_number $LINES)
+            FORMATTED_BREAKDOWN+=$(printf "%-15s --> %10s lines\n" "$LANG" "$FORMATTED")$'\n'
+          done <<< "$LANG_BREAKDOWN"
+
           FORMATTED_TOTAL=$(format_number $TOTAL_LINES)
-          FORMATTED_JS=$(format_number $JS_LINES)
-          FORMATTED_TS=$(format_number $TS_LINES)
-          FORMATTED_JSX=$(format_number $JSX_LINES)
-          FORMATTED_CSHARP=$(format_number $CSHARP_LINES)
-          FORMATTED_VUE=$(format_number $VUE_LINES)
-          FORMATTED_PHP=$(format_number $PHP_LINES)
-          FORMATTED_OTHER=$(format_number $OTHER_LINES)
 
           CODE_BLOCK="\`\`\`
           [ LANGUAGES BREAKDOWN ]
 
-          JavaScript   --> $FORMATTED_JS lines
-          TypeScript   --> $FORMATTED_TS lines
-          JSX          --> $FORMATTED_JSX lines
-          Vue.js       --> $FORMATTED_VUE lines
-          PHP          --> $FORMATTED_PHP lines
-          C#           --> $FORMATTED_CSHARP lines
-          Other        --> $FORMATTED_OTHER lines
-
+          $FORMATTED_BREAKDOWN
           [ TOTAL LINES OF CODE: $FORMATTED_TOTAL ]
           \`\`\`"
 
