--- a/.github/workflows/analyze-code.yml
+++ b/.github/workflows/analyze-code.yml
@@ -1,6 +1,9 @@
 name: Update Lines of Code in Readme
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: "0 0 * * 0" # Runs weekly on Sunday at midnight (UTC)
   workflow_dispatch: # Allows manual trigger
@@ -8,6 +11,13 @@ on:
 jobs:
   count-lines:
     runs-on: ubuntu-latest
+    env:
+      # Check official cloc documentation for supported languages and their exact names
+      # Languages to show individually in README (others will be grouped under "Others")
+      HIGHLIGHT_LANGS: "C,JavaScript,Java,Python"
+
+      # Languages to ignore completely (not shown and not counted in totals)
+      IGNORE_LANGS: "JSON,HTML,CSS,SCSS,Sass,Markdown,SVG,YAML,TOML,CSV,Text,Properties"
 
     steps:
       - name: Checkout Code
@@ -47,7 +57,7 @@ jobs:
           # Run cloc to analyze lines of code, excluding non-source code files
           echo "Calculating lines of code..."
           mkdir -p ../output
-          cloc . --exclude-ext=json,html,css,svg,md,py,ps1,scss --json > ../output/cloc-output.json
+          cloc . --json --report-file=../output/cloc-output.json --exclude-lang="${IGNORE_LANGS}"
 
       # Commit and push the updated cloc-output.json and README.md to the current branch
       - name: Commit and Push Output
@@ -57,42 +67,55 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Format and update README
-          TOTAL_LINES=$(jq '.SUM.code // 0' output/cloc-output.json)
-          JS_LINES=$(jq '.JavaScript.code // 0' output/cloc-output.json)
-          TS_LINES=$(jq '.TypeScript.code // 0' output/cloc-output.json)
-          JSX_LINES=$(jq '.JSX.code // 0' output/cloc-output.json)
-          CSHARP_LINES=$(jq '."C#".code // 0' output/cloc-output.json)
-          VUE_LINES=$(jq '."Vuejs Component".code // 0' output/cloc-output.json)
-          PHP_LINES=$(jq '.PHP.code // 0' output/cloc-output.json)
-          OTHER_LINES=$((TOTAL_LINES - JS_LINES - TS_LINES - JSX_LINES - PHP_LINES - CSHARP_LINES - VUE_LINES))
-
-          # Function to format numbers with commas (ensuring proper locale settings)
+          # --- format helper ---
           format_number() {
-            export LC_ALL="en_US.UTF-8"
-            printf "%'d\n" $1
+            printf "%'d\n" "$1"
           }
 
-          FORMATTED_TOTAL=$(format_number $TOTAL_LINES)
-          FORMATTED_JS=$(format_number $JS_LINES)
-          FORMATTED_TS=$(format_number $TS_LINES)
-          FORMATTED_JSX=$(format_number $JSX_LINES)
-          FORMATTED_CSHARP=$(format_number $CSHARP_LINES)
-          FORMATTED_VUE=$(format_number $VUE_LINES)
-          FORMATTED_PHP=$(format_number $PHP_LINES)
-          FORMATTED_OTHER=$(format_number $OTHER_LINES)
+          # Ensure grouping is enabled for every printf in this step
+          export LC_ALL="en_US.UTF-8"
+          export LANG="en_US.UTF-8"
+
+          # Grab total from cloc
+          TOTAL_LINES=$(jq '.SUM.code // 0' output/cloc-output.json)
+
+          OTHER_LINES=0
+          FORMATTED_BREAKDOWN=""
+
+          # Iterate over each language and its code lines
+          HL=",$(echo "$HIGHLIGHT_LANGS" | tr -d ' '),"
+
+          while read -r entry; do
+            LANG=$(echo "$entry" | jq -r '.lang')
+            LINES=$(echo "$entry" | jq -r '.lines')
+
+            if [[ "$HL" == *",$LANG,"* ]]; then
+              FORMATTED=$(format_number "$LINES")
+              FORMATTED_BREAKDOWN+=$(printf "%-15s --> %10s lines\n" "$LANG" "$FORMATTED")$'\n'
+            else
+              OTHER_LINES=$((OTHER_LINES + LINES))
+            fi
+          done < <(
+            jq -c 'to_entries
+              | map(select(.key != "header" and .key != "SUM"))
+              | map({lang: .key, lines: .value.code})
+              | map(select(.lines > 0))
+              | .[]' output/cloc-output.json
+          )
+
+          # Add Others (formatted)
+          if [[ $OTHER_LINES -gt 0 ]]; then
+            FORMATTED_OTHER=$(format_number "$OTHER_LINES")
+            FORMATTED_BREAKDOWN+=$(printf "%-15s --> %10s lines\n" "Others" "$FORMATTED_OTHER")$'\n'
+          fi
+
+          # Format total ONCE (do not overwrite later)
+          FORMATTED_TOTAL=$(format_number "$TOTAL_LINES")
 
           CODE_BLOCK="\`\`\`
           [ LANGUAGES BREAKDOWN ]
 
-          JavaScript   --> $FORMATTED_JS lines
-          TypeScript   --> $FORMATTED_TS lines
-          JSX          --> $FORMATTED_JSX lines
-          Vue.js       --> $FORMATTED_VUE lines
-          PHP          --> $FORMATTED_PHP lines
-          C#           --> $FORMATTED_CSHARP lines
-          Other        --> $FORMATTED_OTHER lines
-
+          $FORMATTED_BREAKDOWN
           [ TOTAL LINES OF CODE: $FORMATTED_TOTAL ]
           \`\`\`"
 
