--- a/.github/workflows/analyze-code.yml
+++ b/.github/workflows/analyze-code.yml
@@ -12,12 +12,12 @@ jobs:
   count-lines:
     runs-on: ubuntu-latest
     env:
-      # Check official cloc documentation for supported languages and their exact names
-      # Languages to show individually in README (others will be grouped under "Others")
+      # Check cloc docs for supported languages and exact names (e.g., "Vuejs Component", "C#")
+      # HIGHLIGHT_LANGS: show these languages individually; everything else goes to "Others"
       HIGHLIGHT_LANGS: "JavaScript,TypeScript,JSX,Vuejs Component,PHP,C#"
 
-      # Languages to ignore completely (not shown and not counted in totals)
-      IGNORE_LANGS: "JSON,HTML,CSS,SCSS,Sass,Markdown,SVG,YAML,TOML,CSV,Text,Properties"
+      # IGNORE_LANGS: drop these languages entirely (not shown and not counted)
+      IGNORE_LANGS: "JSON,HTML,CSS,SCSS,Sass,Markdown,SVG,XML,YAML,TOML,CSV,Text,Properties"
 
     steps:
       - name: Checkout Code
@@ -51,12 +51,14 @@ jobs:
             DEFAULT_BRANCH=$(curl -H "Authorization: token $GH_PAT" -s "https://api.github.com/repos/$REPO" | jq -r '.default_branch')
 
             # echo "Cloning $REPO (default branch: $DEFAULT_BRANCH)..."
-            git clone --branch "$DEFAULT_BRANCH" --single-branch "$AUTHENTICATED_REPO" "$(basename $REPO)-$DEFAULT_BRANCH" || echo "Failed to clone a repository"
+            git clone --quiet --branch "$DEFAULT_BRANCH" --single-branch "$AUTHENTICATED_REPO" "$(basename $REPO)-$DEFAULT_BRANCH" || echo "Failed to clone a repository"
           done
 
           # Run cloc to analyze lines of code, excluding non-source code files
           echo "Calculating lines of code..."
           mkdir -p ../output
+          # Count LOC for all cloned repos; exclude languages via cloc's own --exclude-lang so totals match SUM
+          # NOTE: This does NOT apply .gitignore automatically across multiple repos; for per-repo .gitignore, run cloc per folder
           cloc . --json --report-file=../output/cloc-output.json --exclude-lang="${IGNORE_LANGS}"
 
       # Commit and push the updated cloc-output.json and README.md to the current branch
@@ -66,6 +68,9 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Number formatting: enable thousands separators for all printf in this step
+          # LC_ALL/LANG must be set before any printf that uses %'d
 
           # --- format helper ---
           format_number() {
@@ -82,7 +87,7 @@ jobs:
           OTHER_LINES=0
           FORMATTED_BREAKDOWN=""
 
-          # Iterate over each language and its code lines
+          # Normalize the highlight list for exact, comma-bounded matching (no false partial matches)
           HL=",$(echo "$HIGHLIGHT_LANGS" | tr -d ' '),"
 
           while read -r entry; do
@@ -103,7 +108,7 @@ jobs:
               | .[]' output/cloc-output.json
           )
 
-          # Add Others (formatted)
+          # "Others" includes all non-highlighted languages that cloc reported (after --exclude-lang); excluded ones never reach here
           if [[ $OTHER_LINES -gt 0 ]]; then
             FORMATTED_OTHER=$(format_number "$OTHER_LINES")
             FORMATTED_BREAKDOWN+=$(printf "%-12s --> %s lines\n" "Others" "$FORMATTED_OTHER")$'\n'
@@ -119,7 +124,8 @@ jobs:
           [ TOTAL LINES OF CODE: $FORMATTED_TOTAL ]
           \`\`\`"
 
-          # Update README.md by replacing the section between predefined comment markers
+          # Replace content between markers. Requires these in README.md:
+          # <!-- LANGUAGES BREAKDOWN START --> ... <!-- LANGUAGES BREAKDOWN END -->
           echo "$CODE_BLOCK" > temp_block.txt
           sed -i '/<!-- LANGUAGES BREAKDOWN START -->/,/<!-- LANGUAGES BREAKDOWN END -->/{
               //!d
