--- a/analyze-code.yml
+++ b/analyze-code.yml
@@ -8,6 +8,13 @@ on:
 jobs:
   count-lines:
     runs-on: ubuntu-latest
+    env:
+      # Check cloc docs for supported languages and exact names (e.g., "Vuejs Component", "C#")
+      # HIGHLIGHT_LANGS: show these languages individually; everything else goes to "Others"
+      HIGHLIGHT_LANGS: "JavaScript,TypeScript,JSX,Vuejs Component,PHP,C#"
+
+      # IGNORE_LANGS: drop these languages entirely (not shown and not counted)
+      IGNORE_LANGS: "JSON,HTML,CSS,SCSS,Sass,Markdown,SVG,XML,YAML,TOML,CSV,Text,Properties"
 
     steps:
       - name: Checkout Code
@@ -48,54 +55,66 @@ jobs:
           # Run cloc to analyze lines of code, excluding non-source code files
           echo "Calculating lines of code..."
           mkdir -p ../output
-          cloc . \
-            --exclude-ext=html,htm,css,json,md,markdown,xml,svg,scss,yaml,toml,csv,txt,yml,sass,lock,log,properties,HTML,HTM,CSS,JSON,MD,MARKDOWN,XML,SVG,SCSS,YAML,TOML,CSV,TXT,YML,SASS,LOCK,LOG,PROPERTIES \
-            --json > ../output/cloc-output.json
+          # Count LOC for all cloned repos; exclude languages via cloc's own --exclude-lang so totals match SUM
+          # NOTE: This does NOT apply .gitignore automatically across multiple repos; for per-repo .gitignore, run cloc per folder
+          cloc . --json --report-file=../output/cloc-output.json --exclude-lang="${IGNORE_LANGS}"
 
       # Commit and push the updated cloc-output.json and README.md to the current branch
       - name: Commit and Push Output
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
-          INCLUDE_LANGS: "C,Javascript,Java,Python"   # Mention Languages to be displayed in the README (match CLOC names)
-          EXCLUDE_LANGS: "XML,Properties,Maven,Gradle"    # Mention Languages to be ignored completely in the README
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          TOTAL_LINES=0
+          # Number formatting: enable thousands separators for all printf in this step
+          # LC_ALL/LANG must be set before any printf that uses %'d
+
+          # --- format helper ---
+          format_number() {
+            printf "%'d\n" "$1"
+          }
+
+          # Ensure grouping is enabled for every printf in this step
+          export LC_ALL="en_US.UTF-8"
+          export LANG="en_US.UTF-8"
+
+          # Grab total from cloc
+          TOTAL_LINES=$(jq '.SUM.code // 0' output/cloc-output.json)
+
           OTHER_LINES=0
           FORMATTED_BREAKDOWN=""
 
-          IFS=',' read -r -a INCLUDE <<< "$INCLUDE_LANGS"
-          IFS=',' read -r -a EXCLUDE <<< "$EXCLUDE_LANGS"
+          # Normalize the highlight list for exact, comma-bounded matching (no false partial matches)
+          HL=",$(echo "$HIGHLIGHT_LANGS" | tr -d ' '),"
 
-          for entry in $(jq -r 'to_entries | map(select(.key != "header" and .key != "SUM")) | map({lang: .key, lines: .value.code}) | map(select(.lines > 0)) | .[] | @base64' output/cloc-output.json); do
-            _jq() { echo "$entry" | base64 --decode | jq -r "$1"; }
-            LANG=$(_jq '.lang')
-            LINES=$(_jq '.lines')
+          while read -r entry; do
+            LANG=$(echo "$entry" | jq -r '.lang')
+            LINES=$(echo "$entry" | jq -r '.lines')
 
-            # Skip excluded languages
-            if [[ " ${EXCLUDE[@]} " =~ (^|[[:space:]])$LANG($|[[:space:]]) ]]; then
-              continue
-            fi
-
-            # Include explicitly listed languages
-            if [[ " ${INCLUDE[@]} " =~ (^|[[:space:]])$LANG($|[[:space:]]) ]]; then
-              FORMATTED=$(printf "%'d\n" $LINES)
-              FORMATTED_BREAKDOWN+=$(printf "%-15s --> %10s lines\n" "$LANG" "$FORMATTED")$'\n'
-              TOTAL_LINES=$((TOTAL_LINES + LINES))
+            if [[ "$HL" == *",$LANG,"* ]]; then
+              FORMATTED=$(format_number "$LINES")
+              FORMATTED_BREAKDOWN+=$(printf "%-12s --> %s lines\n" "$LANG" "$FORMATTED")$'\n'
             else
               OTHER_LINES=$((OTHER_LINES + LINES))
             fi
-          done
+          done < <(
+            jq -c 'to_entries
+              | map(select(.key != "header" and .key != "SUM"))
+              | map({lang: .key, lines: .value.code})
+              | map(select(.lines > 0))
+              | .[]' output/cloc-output.json
+          )
 
+          # "Others" includes all non-highlighted languages that cloc reported (after --exclude-lang); excluded ones never reach here
           if [[ $OTHER_LINES -gt 0 ]]; then
-            FORMATTED_OTHER=$(printf "%'d\n" $OTHER_LINES)
-            FORMATTED_BREAKDOWN+=$(printf "%-15s --> %10s lines\n" "Others" "$FORMATTED_OTHER")$'\n'
-            TOTAL_LINES=$((TOTAL_LINES + OTHER_LINES))
+            FORMATTED_OTHER=$(format_number "$OTHER_LINES")
+            FORMATTED_BREAKDOWN+=$(printf "%-12s --> %s lines\n" "Others" "$FORMATTED_OTHER")$'\n'
           fi
 
-          FORMATTED_TOTAL=$(printf "%'d\n" $TOTAL_LINES)
+          # Format total ONCE (do not overwrite later)
+          FORMATTED_TOTAL=$(format_number "$TOTAL_LINES")
+
           CODE_BLOCK="\`\`\`
           [ LANGUAGES BREAKDOWN ]
 
@@ -103,7 +122,8 @@ jobs:
           [ TOTAL LINES OF CODE: $FORMATTED_TOTAL ]
           \`\`\`"
 
-          # Update README.md by replacing the section between predefined comment markers
+          # Replace content between markers. Requires these in README.md:
+          # <!-- LANGUAGES BREAKDOWN START --> ... <!-- LANGUAGES BREAKDOWN END -->
           echo "$CODE_BLOCK" > temp_block.txt
           sed -i '/<!-- LANGUAGES BREAKDOWN START -->/,/<!-- LANGUAGES BREAKDOWN END -->/{
               //!d
