--- a/analyze-code.yml
+++ b/analyze-code.yml
@@ -1,5 +1,5 @@
 name: Update Lines of Code in Readme
-
+# Just adding a comment to trigger workflow
 on:
   schedule:
     - cron: "0 0 * * 0" # Runs weekly on Sunday at midnight (UTC)
