--- a/analyze-code.yml
+++ b/analyze-code.yml
@@ -33,7 +33,7 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           # Set your GitHub username
-          USERNAME="<your-github-username>"
+          USERNAME="bzhang4974"
 
           # Get a list of public repositories that are not forks
           REPOS=$(curl -H "Authorization: token $GH_PAT" -s "https://api.github.com/user/repos?per_page=100" | jq -r '.[] | select(.fork == false) | .full_name') || echo "Error fetching repositories"
